--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -15,6 +15,8 @@ export LANG=en_US.UTF-8
 # Include the alias file
 source $HOME/.zsh_alias
 
+source $HOME/.zsh_functions
+
 # Starship prompt
 eval "$(starship init zsh)"
 
