--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -13,9 +13,10 @@ export EDITOR="vim"
 export LANG=en_US.UTF-8
 
 # Include the alias file
-source $HOME/.zsh_alias
+for config (~/.zsh/*.zsh) source $config
+# source $HOME/.zsh_alias
 
-source $HOME/.zsh_functions
+# source $HOME/.zsh_functions
 
 # Starship prompt
 eval "$(starship init zsh)"
