--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -13,14 +13,11 @@ export EDITOR="vim"
 export LANG=en_US.UTF-8
 
 # Include the alias file
-if [[ -d "$ZDOTDIR" ]]; then
-  for file in "$ZDOTDIR"/*.zsh; do
+if [[ -d ~/.zsh/ ]]; then
+  for file in ~/.zsh/*; do
     source "$file"
   done
 fi
-# source $HOME/.zsh_alias
-
-# source $HOME/.zsh_functions
 
 # Starship prompt
 eval "$(starship init zsh)"
