--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -12,7 +12,7 @@ source $ZSH/oh-my-zsh.sh
 export EDITOR="vim"
 export LANG=en_US.UTF-8
 
-# Include the alias file
+# Include zsh source files
 if [[ -d ~/.zsh/ ]]; then
   for file in ~/.zsh/*; do
     source "$file"
@@ -47,7 +47,7 @@ export PATH="/usr/local/opt/gnu-getopt/bin:$PATH"
 
 export PATH="/usr/local/bin:$PATH"
 
-#Fuzzy Finder Tool
+# Fuzzy Finder Tool
 # TODO: Setup command to install if not already 
 [ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
 
