Update dot_zshrc.tmpl Update private_dot_config/private_karabiner/private_karabiner.json

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -12,6 +12,7 @@ export PATH="/opt/homebrew/opt/node@14/bin:$PATH"
 export PATH="/Applications/Sublime Text.app/Contents/SharedSupport/bin:$PATH"
 export PATH="/usr/local/opt/openssl@1.0.2t/bin:$PATH"
 export PATH="/usr/local/opt/gnu-getopt/bin:$PATH"
+export PATH="/Users/snellin/Library/Python/3.9/bin:$PATH"
 {{- end }}
 
 {{- if eq .chezmoi.hostname "dev-dsk-snellin-2b-8d3a360b" }}
