--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -28,3 +28,13 @@ echo "TODO: Checking for dotfile updates..."
 
 # I think thji sis needed for mac. Double check later
 # export PATH="/bin:${PATH//:\/bin:/:}"
+
+
+# Add mise for some dependency management
+eval "$(~/.local/bin/mise activate zsh)"
+
+# Add NVM stuff for node management
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+
