--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -33,6 +33,6 @@ echo "TODO: Checking for dotfile updates..."
 # Add mise for some dependency management
 eval "$(~/.local/bin/mise activate zsh)"
 
- 30 export NVM_DIR="$HOME/.nvm"
- 31 [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
- 32 [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
