--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -5,6 +5,7 @@ if [[ -d ~/.zsh/ ]]; then
   done
 fi
 
+
 {{ if eq .chezmoi.os "darwin" }}
 # Mac Only Stuff
 export PATH="/opt/homebrew/opt/node@14/bin:$PATH"
@@ -12,6 +13,12 @@ export PATH="/Applications/Sublime Text.app/Contents/SharedSupport/bin:$PATH"
 export PATH="/usr/local/opt/openssl@1.0.2t/bin:$PATH"
 export PATH="/usr/local/opt/gnu-getopt/bin:$PATH"
 export PATH="/Users/snellin/Library/Python/3.9/bin:$PATH"
+
+
+# Testing SpaceVim
+alias svim='vim -u ~/.SpaceVim/vimrc'
+
+
 {{- end }}
 
 {{ if eq .chezmoi.os "linux" }}
