--- a/dot_zsh/03-amazon.zsh.tmpl
+++ b/dot_zsh/03-amazon.zsh.tmpl
@@ -7,7 +7,7 @@ export PATH="$PATH:/apollo/env/CodeSearchCLI/bin/"
 {{ if eq .chezmoi.os "darwin" }}
     export DOCKER_HOST=unix:///Applications/Finch/lima/data/finch/sock/finch.sock
     export DOCKER_CONFIG=$HOME/.finch
-{{- end }}
+{{ end }}
 
 
 
