--- a/private_dot_config/starship.toml.tmpl
+++ b/private_dot_config/starship.toml.tmpl
@@ -10,8 +10,12 @@ disabled = false
 
 {{ if eq .devspaces "true" }}
 
+[hostname]
+ssh_only = false
 
 
+[container]
+disabled = true
 
 {{ end }}
 
