--- a/private_dot_config/starship.toml.tmpl
+++ b/private_dot_config/starship.toml.tmpl
@@ -8,7 +8,7 @@ command_timeout = 500
 disabled = false
 
 
-{{ if eq .devspaces "true" }}
+{{ if eq .chezmoidata.devspaces "true" }}
 
 [hostname]
 ssh_only = false
