--- a/dot_zsh/03-amazon.zsh.tmpl
+++ b/dot_zsh/03-amazon.zsh.tmpl
@@ -166,6 +166,12 @@ function ada_isengard() {
    export AWS_SESSION_TOKEN=$(echo ${ada_output} | jq -r .SessionToken)
 }
 
+function ada_claude() {
+  ada_isengard 972842349728
+  export CLAUDE_CODE_USE_BEDROCK=1
+  export ANTHROPIC_MODEL='us.anthropic.claude-opus-4-20250514-v1:0'
+}
+
 function ada_personal() {
    ada_output=$(ada credentials print --account 232890881194 --role Admin --provider isengard) 
    export AWS_ACCESS_KEY_ID=$(echo ${ada_output} | jq -r .AccessKeyId) 
