--- a/dot_zsh/03-amazon.zsh.tmpl
+++ b/dot_zsh/03-amazon.zsh.tmpl
@@ -1,6 +1,7 @@
 # Amazon Specific Configuration
 export PATH=/apollo/env/envImprovement/bin:$PATH
 export PATH="$HOME/.toolbox/bin:$PATH"
+export PATH="$HOME/.claude/tools:$PATH"
 export PATH="/usr/local/bin:$PATH"
 export PATH="$PATH:/apollo/env/CodeSearchCLI/bin/"
 export CLAUDE_CODE_USE_BEDROCK=1
