--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -62,3 +62,9 @@ nvm() {
 }
 
 [[ "$TERM_PROGRAM" == "kiro" ]] && . "$(kiro --locate-shell-integration-path zsh)"
+
+{{ if eq .chezmoi.os "linux" }}
+# if you wish to use IMDS set AWS_EC2_METADATA_DISABLED=false
+
+export AWS_EC2_METADATA_DISABLED=true
+{{- end }}
