--- a/dot_zsh/03-amazon.zsh.tmpl
+++ b/dot_zsh/03-amazon.zsh.tmpl
@@ -135,7 +135,7 @@ function multi-ssh() {
     options+=(-N -L ${port}:localhost:${port})
   done
 
-  ssh ${=options} AxeDesktop &
+  ssh ${=options} DevDesktop &
 }
 
 
