--- a/dot_zsh/zsh_alias.zsh.tmpl
+++ b/dot_zsh/zsh_alias.zsh.tmpl
@@ -39,3 +39,7 @@ alias ebbb='eda build brazil-build build'
 #### Claude Alias
 alias cld='claude --dangerously-skip-permissions'
 alias claude-creds='ada credentials update --account=972842349728 --provider=isengard --role="Admin"'
+
+
+#### Claude Alias
+alias kd='kiro-cli'
