--- a/dot_zsh/zsh_alias.zsh.tmpl
+++ b/dot_zsh/zsh_alias.zsh.tmpl
@@ -42,4 +42,4 @@ alias claude-creds='ada credentials update --account=972842349728 --provider=ise
 
 
 #### Claude Alias
-alias kd='kiro-cli'
+alias kd='kiro-cli --trust-all-tools'
