--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -13,6 +13,7 @@ export PATH="/Applications/Sublime Text.app/Contents/SharedSupport/bin:$PATH"
 export PATH="/usr/local/opt/openssl@1.0.2t/bin:$PATH"
 export PATH="/usr/local/opt/gnu-getopt/bin:$PATH"
 export PATH="/Users/snellin/Library/Python/3.9/bin:$PATH"
+export PATH="/Users/snellin/.aim/mcp-servers:$PATH"
 
 # Testing SpaceVim
 alias svim='vim -u ~/.SpaceVim/vimrc'
@@ -69,5 +70,3 @@ nvm() {
 export AWS_EC2_METADATA_DISABLED=true
 {{- end }}
 
-# Added by AIM CLI
-export PATH="~/.aim/mcp-servers:$PATH"
