--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -14,6 +14,7 @@ export PATH="/usr/local/opt/openssl@1.0.2t/bin:$PATH"
 export PATH="/usr/local/opt/gnu-getopt/bin:$PATH"
 export PATH="/Users/snellin/Library/Python/3.9/bin:$PATH"
 export PATH="/Users/snellin/.aim/mcp-servers:$PATH"
+export PATH=/Users/snellin/.opencode/bin:$PATH
 
 # Testing SpaceVim
 alias svim='vim -u ~/.SpaceVim/vimrc'
