--- a/dot_zsh/zsh_alias.zsh.tmpl
+++ b/dot_zsh/zsh_alias.zsh.tmpl
@@ -3,7 +3,7 @@ alias glll='git log --graph --all -n 30 --pretty=format:"%Cblue%h%Creset [%Cgree
 alias gllll='git log --graph --all -n 40 --pretty=format:"%Cblue%h%Creset [%Cgreen%ar%Creset] [%Cred%an%Creset] %s%C(yellow)%d%Creset"'
 alias glp='git log --graph -n 20  --pretty=format:"%Cblue%h%Creset [%Cgreen%ar%Creset] [%Cred%an%Creset] %s%C(yellow)%d%Creset" HEAD'
 alias moi='chezmoi'
-alias moist='chezmoi status --verbose'
+alias moist='chezmoi status --verbose --path-style absolute'
 
 
 alias root='cd $(git rev-parse --show-cdup)'
