--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -52,6 +52,7 @@ lazy_load_nvm() {
   [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
   [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
 }
+node -v
 
 node() {
   lazy_load_nvm
