--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -15,7 +15,7 @@
     default = simple
     default = current
     autoSetupRemote = true
-	conflictStyle = zdiff3
+    conflictStyle = zdiff3
 [mergetool]
     keepBackup = false
 [alias]
@@ -57,3 +57,8 @@
     helper =
     helper = !/usr/bin/gh auth git-credential
 {{- end }}
+ 
+[interactive]
+	diffFilter = delta --color-only
+[delta]
+	navigate = true
